# assessment-bot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  README.md  main.py  pyproject.toml  questions.json  questions_th.json  run_mocked_interview.py  web.py
.agents/skills/dspy-expert/: SKILL.md
.pi/extensions/: guardrails.json  guardrails.v0.json
data/training/: sql_examples.json
docs/: known-issues-gradio-ui.md  original_plan.md
docs/adr/: 0001-bootstrap-few-shot-for-poc.md
docs/handoff/: 2026-05-29-optimization-pipeline.md
docs/superpowers/plans/: 2026-03-31-dspy-interview-bot.md  2026-03-31-interview-bot-v0.2.0-refinements.md  2026-03-31-interview-bot-v0.3.0-ambiguity-observability.md  2026-04-02-mlflow-sessions-tab-integration.md  2026-04-03-orchestrator-state-refinements.md  2026-04-05-json-schema-topic-id.md  2026-04-08-gradio-web-ui.md  2026-04-11-dspy-optimization.md
docs/superpowers/specs/: 2026-03-31-dspy-redesign-design.md  2026-03-31-interview-bot-v0.2.0-refinements-design.md  2026-03-31-interview-bot-v0.3.0-ambiguity-observability-design.md  2026-04-03-orchestrator-state-refinements-design.md  (+5 more)
schemas/: questions.schema.json
scripts/: collect_training_data.py  optimize.py
src/: config.py  data.py  metric.py  modules.py  orchestrator.py  report.py  schema.py  session.py  signatures.py  training.py
tests/: test_config.py  test_data.py  test_metric.py  test_orchestrator.py  test_report.py  test_schema.py  test_session.py  test_training.py  test_web.py
training/: answer_variants.json  collected_data.json  optimized.json
(+9 files in other folders)
