[project]
name = "assessment-bot"
version = "0.4.0"
description = "IT skill interview bot powered by DSPy with CLI and web UI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.1.3",
    "gradio>=6.0",
    "jsonschema>=4.23.0",
    "mlflow>=3.10.1",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["."]
